# Discharge

./: GRILL_io.py  README.md  astra_LH_spectrum.ipynb  astra_parameters.ipynb  config.ipynb  pyproject.toml  rt_cfg_dat.json  rt_parameters.py  spektr.ipynb
22_09_21/: 40167equ_01
40167/: 40167equ  40167equ_01  40167exp  40167exp_01
astra/: .gitignore  40167equ  40167equ_01  40167equ_02  GRILL_io.py  README.md  astra.py  astra_LH_spectrum.ipynb  astra_config.json  astra_run.ipynb  astra_run2.ipynb  astra_zip.py  configurator.ipynb  configurator.py  distribution.ipynb  race.py  radial_data.ipynb  ray_tracing.ipynb  ray_tracing.py  ray_tracing_cfg.json  run.py  spektr.utf8.txt  summary.ipynb  summary.py  summary4.ipynb  summary5.ipynb  summary_6.ipynb  summary_grill.ipynb  trajectory.ipynb  trajectory_dev.ipynb
astra/exp_equ/: 40167_01.equ  40167_02.equ  showdata.equ
astra/sbr/: debug.f  lhcd2017.f  lhcd2017_d.f  saveprofiles.f  typdsp_ext.f
astra/src/: GRILL_io.py  radial_data.py  summary.py
src/: astra.py  astra_zip.py  race.py  ray_tracing.py  run.py
