[tool.poetry]
name = "discharge"
version = "0.1.0"
description = "tools for ASTRA"
authors = ["Alex <temper8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
ipykernel = "^6.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
